--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900|Ubuntu:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/animate.css">
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+	<script src="js/SmoothScroll.js"></script>
 	<script src="js/main.js"></script>
 </head>
 
@@ -61,7 +62,7 @@
 				<h3>Разработка сайтов <img src="images/iphone.png" alt=""></h3>
 				<p>Студия веб-разработки с широким спектром возможность, а так же с большим списком приятных бонусов. Наша компания сделает для вас: сайт, брендинг, интернет-магазин,мобильное приложение.
 				</p>
-				<a href="#">Свяжитесь со мной</a>
+				<a href="#" class="button">Свяжитесь со мной</a>
 				<div class="deadLine">
 					<p>СРОК РАЗРАБОТКИ</p>
 					<h3>от 14 дней</h3>
@@ -76,13 +77,318 @@
 
 			</div>
 			<div class="firstScreen__right">
+				<div class="firstScreen__right--icon">
+					<div class="socIcons">
+						<ul>
+							<li><a target="_blank" href="404.html"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+							</li>
+							<li><a target="_blank" href="404.html"> <i class="fa fa-vk" aria-hidden="true"></i></a>
+							</li>
+							<li><a target="_blank" href="instagram.com/redree_digital/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="firstScreen__right--text">
+					мы в соц.сетях
+				</div>
+			</div>
+
+		</section>
+		<section class="thirdScreen">
+			<h3>Услуги</h3>
+			<p>Хорошо спроектированный интерфейс — основа успешного проекта, поэтому мы начинаем работу над сайтом с аналитики: изучаем конкурентов, описываем портреты целевой аудитории и создаем прототипы основных страниц будущего сайта. </p>
+			<h4>Все виды услуг <br> продоставленные в нашем агенстве.</h4>
+			<div class="serviceWrapper">
+				<div class="serviceWrapper__left">
+					<div class="serviceWrapper__left--item">
+						<h3>01</h3>
+						<h4>Промо-сайт</h4>
+						<p>Промо-сайт требуется для активного продвижения отдельно взятого товара или услуги. Делаем лендинги о продуктах, сайты мероприятий.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+
+					<div class="serviceWrapper__left--item">
+						<h3>03</h3>
+						<h4>Сервис</h4>
+						<p>Опыт работы со стартапами научил нас превращать набор требований и пожеланий в удобный сервис. Больше всего любим сложную разработку, реализуем идеи любого масштаба.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+
+					<div class="serviceWrapper__left--item">
+						<h3>05</h3>
+						<h4>Мобильные приложения</h4>
+						<p>Полноценно включаем сайт в систему маркетинга компании, интегрируем с системами учета и с сервисами доставки и оплаты. Делаем удобную и гибкую систему управления, заботимся о конверсии.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+				</div>
+				<div class="serviceWrapper__right">
+
+					<div class="serviceWrapper__right--item">
+						<h3>02</h3>
+						<h4>Корпоративный сайт</h4>
+						<p>Корпоративный сайт - это визитная карточка вашей компании. Создаем площадку для взаимодействия компании с клиентами, партнерами, сотрудниками. Расскажем об услугах, соберем данные о посетителях, организуем обратную связь с ними.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+
+
+					<div class="serviceWrapper__right--item">
+						<h3>04</h3>
+						<h4>Интернет-магазин</h4>
+						<p>Полноценно включаем сайт в систему маркетинга компании, интегрируем с системами учета и с сервисами доставки и оплаты. Делаем удобную и гибкую систему управления, заботимся о конверсии.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+
+					<div class="serviceWrapper__right--item">
+						<h3>06</h3>
+						<h4>Разработка брендинга</h4>
+						<p>Полноценно включаем сайт в систему маркетинга компании, интегрируем с системами учета и с сервисами доставки и оплаты. Делаем удобную и гибкую систему управления, заботимся о конверсии.</p>
+						<div class="serviceWrapButt">
+							<a href="#" class="button">Расчитать стоимость</a>
+							<a href="#">ПОДРОБНЕЕ ОБ УСЛУГЕ</a>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+
+		</section>
+
+		<section class="fourthScreen">
+			<h3>Узнать подробности</h3>
+			<form action="#" method="POST" class="callMe">
+				<input type="text" required placeholder="Имя">
+				<input type="email" required placeholder="Email">
+				<input type="text" required placeholder="Телефон">
+				<button class="button">Свяжитесь со мной</button>
+			</form>
+		</section>
+
+
+		<section class="fifthScreen">
+			<h3>Студия</h3>
+			<p>Digital агенство RedRee работает с начала 2017 года.Основные направления — брендинг, разработка веб-сайтов, создание визуальных образов для поддержания имиджа компаний, их продуктов и услуг. Наша цель — делать продукты и услуги понятными и привлекательными для потребителя.
+			</p>
+			<h4>Все кто трудятся в нашем агенстве.</h4>
+
+			<div class="workersWrap">
+
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo">
+						<img src="images/rasul_bg.png" alt="">
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Зияудинов Расул</h5>
+							<span>Арт-директор, основатель.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo">
+						<img src="images/kristina_bg.png" alt="">
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Тюрюханова Кристина</h5>
+							<span>Back-end разработчик, основатель.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo">
+						<img src="images/vic_bg.png" alt="">
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Осипов Виктор</h5>
+							<span>Front-End разработчик, основатель.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo">
+						<img src="images/ruslan_bg.png" alt="">
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Алиев Руслан</h5>
+							<span>Android-разработчик.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo">
+						<img src="images/zaur_bg.png" alt="">
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Магомедов Заурбек</h5>
+							<span>Front-End разработчик, основатель.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo" style="background-color: #dcf5f6">
+
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Гаджиев Саид</h5>
+							<span>Веб-разработчик.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo" style="background-color: #dcf5f6">
+
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Магомедов Газимагомед</h5>
+							<span>Back-end разработчик.</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="workersWrap__item">
+					<div class="workersWrap__item--photo" style="background-color: #dcf5f6">
+
+					</div>
+					<div class="workersWrap__item--descript">
+						<div class="WORKDESWRAP">
+							<h5>Казимов Камиль</h5>
+							<span>Копирайтер.</span>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+		</section>
+
+
+		<section class="sixthScreen">
+			<h3>Методология</h3>
+			<p>
+				Создание проекта происходит в несколько этапов в соответствии с заверенным заранее планом, начиная от составления общего макета, заканчивая сдачей работ заказчику. В любой момент времени заказчик может проследить на каком этапе разработки сейчас находится его проект.
+			</p>
+			<div class="sixthScreenMethodWrap">
+				<div class="sixthScreenMethodWrap__item">
+					<h3>01</h3>
+					<h4>Исследование</h4>
+					<p>Исследование - процесс формирования перечня функциональных особенностей и подсчёта ориентировочного срока разработки продукта. Также будет созданы: карта приложения и примерная структура будущей системы.</p>
+				</div>
+
+				<div class="sixthScreenMethodWrap__item">
+					<h3>02</h3>
+					<h4>Проектирование</h4>
+					<p>Завершающий этап продукта - документ о решениях и правилах, включающий в себя несколько пунктов, таких как: информационную архитектуру, дизайн взаимодействия, визуальную концепцию сетки, элементы визуальных решений, ТЗ для разработчиков.</p>
+				</div>
+
+				<div class="sixthScreenMethodWrap__item">
+					<h3>01</h3>
+					<h4>Производство</h4>
+					<p>Это этап завершения работ и подведения итогов, исправления ошибок, исправление деталей и доработку важных компонентов. По окончанию данного этапа и согласования товара заказчиком происходит запуск самого продукта.</p>
+				</div>
 
 			</div>
 
 		</section>
 
+		<section class="seventhScreen">
+			<h3>Контакты</h3>
+			<p>
+				В любое время сутов вы можете связаться с нами, мы вас проконсультируем и ответим на любые ваши вопросы.
+			</p>
+			<div class="seventhScreenInfo">
+				<div class="seventhScreenInfo__form">
+					<div class="seventhScreenInfo__formText">
+						<div class="left">
+							<p>+7 963 403 14 05</p>
+							<p>feedback@redree.ru</p>
+						</div>
+						<div class="right">
+							<p><a href="#">Вконтакте</a></p>
+							<p><a href="#">Инстаграм</a></p>
+						</div>
+
+					</div>
+					<span>
+						Оставьте заявку и мы свяжемся <br> с Вами в ближайщее время.
+					</span>
+					<form action="#" method="post">
+
+						<input type="text" placeholder="Имя" required>
+						<input type="email" placeholder="Email" required>
+						<input type="text" placeholder="Телефон" required>
+						<button>Свяжитесь со мной</button>
+
+					</form>
+
+				</div>
+				<div class="seventhScreenInfo__map">
+					<iframe src="https://snazzymaps.com/embed/33259" width="100%" height="100%" style="border:none;"></iframe>
+				</div>
+			</div>
+
+		</section>
 
 
+		<footer class="wrapper__footer">
+			<div class="wrap__footer">
+				<div class="footer_logo">
+					<a href="index.html"><img src="images/logo.png" alt=""></a>
+				</div>
+				<div class="footer_linksPage">
+					<div>
+						<a href="">Главная</a>
+						<a href="">Наши работы</a>
+						<a href="">Услуги</a>
+					</div>
+					<div>
+						<a href="">Студия</a>
+						<a href="">Методология</a>
+						<a href="">Контакты</a>
+					</div>
+				</div>
+				<div class="footer_contact">
+					<div>
+						<p>Контакты:</p>
+						<a href="">+7 963 403 14 05</a>
+						<a href="">feedback@redree.ru</a>
+					</div>
+					<div>
+						<p>Мы в соц.сетях:</p>
+						<a href="">Вконтакте</a>
+						<a href="">Инстаграм</a>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 
 
